# TNI-FlowerTune-LLM-Leaderboard-GeneralNLP

./: .gitignore  README.md  comm_cost.txt  pyproject.toml
flowertune-eval-general-nlp/: README.md  eval.py
flowertune-eval-general-nlp/benchmarks/: acc_mmlu_humanities_eval_results.txt  acc_mmlu_social_sciences_eval_results.txt  acc_mmlu_stem_eval_results.txt  generation_mmlu_social_sciences_eval_results.jsonl  generation_mmlu_stem_eval_results.jsonl
flowertune-eval-general-nlp/benchmarks_noFlexLoRA/: acc_mmlu_humanities_eval_results.txt  acc_mmlu_social_sciences_eval_results.txt  acc_mmlu_stem_eval_results.txt  generation_mmlu_social_sciences_eval_results.jsonl  generation_mmlu_stem_eval_results.jsonl
t_ioi_unr/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
